--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<head>
-	<meta charset="utf-8">
-	<title>stoprain.net</title>
-</head>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>stoprain.net</title>
+		<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+	</head>
 
-<body>
+	<body>
 
-	<img src="images/gmail.png" alt="" />
-	<br />
-	<a href="http://weibo.com/stoprain"><img src="images/weibo.png" alt="" /></a>
+		<h1>Think big</h1>
+		<p>Make no little plans. They have no magic to stir men’s blood and probably themselves will not be realized. Make big plans; aim high in hope and work, remembering that a noble, logical diagram once recorded will never die, but long after we are gone will be a living thing, asserting itself with ever-growing insistency. Remember that our sons and grandsons are going to do things that would stagger us. Let your watchword be order and you beacon beauty. Think big.</p>
 	
-</body>
-
+		<script src="http://code.jquery.com/jquery-latest.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+		
+	</body>
 </html>
