--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
 	</head>
 
 	<body>
-
-		<h1>Think big</h1>
-		<p>Make no little plans. They have no magic to stir men’s blood and probably themselves will not be realized. Make big plans; aim high in hope and work, remembering that a noble, logical diagram once recorded will never die, but long after we are gone will be a living thing, asserting itself with ever-growing insistency. Remember that our sons and grandsons are going to do things that would stagger us. Let your watchword be order and you beacon beauty. Think big.</p>
+		
+		<p> </p>
+		
+		<ul>
+			<li><a href="http://www.ontko.com/pub/rayo/burnham.html">Make no little plans</li>
+			<li><a href="http://www.seas.gwu.edu/~simhaweb/misc/cscareers.html">Computer Science Careers</li>
+		</ul>
 	
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
 		<script src="js/bootstrap.min.js"></script>
