split projects page

--- a/index.html
+++ b/index.html
@@ -21,82 +21,9 @@
 		
 		<h5>About</h5>
 		<ul>
-			<li><a href="http://about.me/stoprain">http://about.me/stoprain</a></li>
-			<li><a href="http://about.me/stoprain">http://weibo.com/stoprain</a></li>
-			
-		</ul>
-		
-		<h5>Team Projects</h5>
-		
-		<ul>
-		   <li> 侨影数码 <del><a href="http://www.shqiaoying.com/">http://www.shqiaoying.com/</a></del></li>
-		   <li> 易富 <a href="http://www.efo.cn">http://www.efo.cn</a></del></li>
-		   <li> Benefits <del><a href="https://www.benefitsfrombluecrossca.com">https://www.benefitsfrombluecrossca.com</a></del></li>
-		   <li> Tonik <del><a href="https://www.tonikhealth.com/">https://www.tonikhealth.com/</a></del></li>
-		   <li> Tang Foundations <a href="http://www.tangfoundation.org/">http://www.tangfoundation.org/</a></li>
-		   <li> Baby on the Run
-		      <ul>
-		         <li> <del><a href="http://itunes.apple.com/us/app/baby-on-the-run-big-land/id425979342?mt=8">http://itunes.apple.com/us/app/baby-on-the-run-big-land/id425979342?mt=8</a></del></li>
-		         <li> <del><a href="http://itunes.apple.com/us/app/baby-on-the-run-first-fun/id411018689?mt=8">http://itunes.apple.com/us/app/baby-on-the-run-first-fun/id411018689?mt=8</a></del></li>
-		      </ul>
-		   </li>
-		   <li> Real Talk Real Answers
-		      <ul>
-		         <li> <a href="http://itunes.apple.com/us/app/real-talk-real-answers/id440534785?ls=1&amp;mt=8">http://itunes.apple.com/us/app/real-talk-real-answers/id440534785?ls=1&amp;mt=8</a></li>
-		      </ul>
-		   </li>
-		   <li> 乐学宜家 <del><a href="http://www.ikea.cn/lexue">http://www.ikea.cn/lexue</a></del></li>
-		   <li> Health Net Mobile <a href="http://itunes.apple.com/us/app/health-net-mobile/id387041560?mt=8">http://itunes.apple.com/us/app/health-net-mobile/id387041560?mt=8</a></li>
-		   <li> eNet Insurance <a href="http://enetinsurance.com/">http://enetinsurance.com/</a></li>
-		   <li> Health Net Product Wheel <a href="https://www.healthnet.com/mobile-gallery">https://www.healthnet.com/mobile-gallery</a></li>
-		   <li> Volcano Sales Application
-		      <ul>
-		         <li> CMS <a href="http://www.volcanosalesapp.com/">http://www.volcanosalesapp.com/</a></li>
-		         <li> iPad client</li>
-		      </ul>
-		   </li>
-		   <li> Verinata <a href="http://www.verinata.com/">http://www.verinata.com/</a></li>
-		   <li> Michelin <a href="http://www.flickr.com/photos/michelinonmain/">http://www.flickr.com/photos/michelinonmain/</a></li>
-		   <li> Overstate <a href="http://www.overstat.com/">http://www.overstat.com/</a></li>
-		   <li> Magic The Gathering 
-		      <ul>
-		         <li> <a href="http://www.facebook.com/MagicTheGathering?sk=app_230990200246470">http://www.facebook.com/MagicTheGathering?sk=app_230990200246470</a></li>
-		         <li> iOS Toolbox <a href="http://itunes.apple.com/us/app/magic-the-gathering-toolbox/id491192015?mt=8">http://itunes.apple.com/us/app/magic-the-gathering-toolbox/id491192015?mt=8</a></li>
-		      </ul>
-		   </li>
-		   <li> Inheritance <a href="http://apps.facebook.com/inheritancequest/">http://apps.facebook.com/inheritancequest/</a></li>
-		   <li> Modelland
-		      <ul>
-		         <li> <a href="http://www.randomhouse.com/teens/modelland/">http://www.randomhouse.com/teens/modelland/</a></li>
-		         <li> <a href="http://www.facebook.com/modelland?sk=app_268274169873364">http://www.facebook.com/modelland?sk=app_268274169873364</a></li>
-		      </ul>
-		   </li>
-		   <li> ViewAMD (Bayer Bootcamp iPad App)
-		      <ul>
-		         <li> CMS <a href="http://bayer-cms.hoverstate.com">http://bayer-cms.hoverstate.com</a></li>
-		      </ul>
-		   </li>
-		   <li> Venefit Sales Application
-		      <ul>
-		         <li> CMS <a href="http://50.57.135.148/">http://50.57.135.148/</a></li>
-		         <li> iPad client</li>
-		      </ul>
-		   </li>
-		</ul>
-		
-		<h5>Personal Projects</h5>
-		
-		<ul>
-		   <li> Graybar (iTunes 歌词同步)</li>
-		   <li> 单词助记 <a href="http://nuts.sinaapp.com/">http://nuts.sinaapp.com/</a></li>
-		   <li> 树洞 <a href="http://traveller.sinaapp.com/">http://traveller.sinaapp.com/</a></li>
-		   <li> 围棋名人名局 - StoneBoard 
- 		      <ul>
- 		         <li> <a href="http://stoneboard.sinaapp.com/">http://stoneboard.sinaapp.com/</a></li>
- 		         <li> <a href="https://itunes.apple.com/us/app/wei-qi-ming-ren-ming-ju/id503170745?mt=8/">https://itunes.apple.com/us/app/wei-qi-ming-ren-ming-ju/id503170745?mt=8</a></li>
- 		      </ul>
-		   </li>
-		   
+			<li><a href="http://about.me/stoprain">About.me</a></li>
+			<li><a href="http://about.me/stoprain">Weibo</a></li>
+			<li><a href="projects.html">Projects</a></li>
 		</ul>
 		
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
