--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 		<h5>About</h5>
 		<ul>
 			<li><a href="http://about.me/stoprain">About.me</a></li>
-			<li><a href="http://about.me/stoprain">Weibo</a></li>
+			<li><a href="http://weibo.com/stoprain">Weibo</a></li>
+			<li><a href="https://github.com/stoprain">GitHub</li>
 			<li><a href="projects.html">Projects</a></li>
 		</ul>
 		
