--- a/projects.html
+++ b/projects.html
@@ -70,21 +70,26 @@
 		         <li> iPad client</li>
 		      </ul>
 		   </li>
+		   <li> edoc2 iPad client <a href="https://itunes.apple.com/us/app/edoc2-hd/id656603924?mt=8">https://itunes.apple.com/us/app/edoc2-hd/id656603924?mt=8</a></li>
+		   </li>
+		   <li> 撩菜撩汤 | 真正有用的交友应用 <a href="https://itunes.apple.com/cn/app/liao-cai-liao-tang-zhen-zheng/id592020754?mt=8">https://itunes.apple.com/cn/app/liao-cai-liao-tang-zhen-zheng/id592020754?mt=8</a></li>
+		   <li> 云诺｜手机智能网盘 <a href="https://itunes.apple.com/cn/app/yun-nuo-shou-ji-zhi-neng-wang/id482562992?mt=8">https://itunes.apple.com/cn/app/yun-nuo-shou-ji-zhi-neng-wang/id482562992?mt=8</a></li>
 		</ul>
 		
 		<h5>Personal Projects</h5>
 		
 		<ul>
-		   <li> Graybar (iTunes 歌词同步)</li>
-		   <li> 单词助记 <a href="http://nuts.sinaapp.com/">http://nuts.sinaapp.com/</a></li>
-		   <li> 树洞 <a href="http://traveller.sinaapp.com/">http://traveller.sinaapp.com/</a></li>
 		   <li> 围棋名人名局 - StoneBoard 
  		      <ul>
  		         <li> <a href="http://stoneboard.sinaapp.com/">http://stoneboard.sinaapp.com/</a></li>
- 		         <li> <a href="https://itunes.apple.com/us/app/wei-qi-ming-ren-ming-ju/id503170745?mt=8/">https://itunes.apple.com/us/app/wei-qi-ming-ren-ming-ju/id503170745?mt=8</a></li>
+ 		         <li> <a href="https://itunes.apple.com/cn/app/wei-qi-ming-ren-ming-ju/id503170745?mt=8">https://itunes.apple.com/cn/app/wei-qi-ming-ren-ming-ju/id503170745?mt=8</a></li>
  		      </ul>
 		   </li>
-		   
+		   <li> WotD - An Urban Dictionary client
+		   <ul>
+		   	<li><a href="https://itunes.apple.com/us/app/wotd/id721103056?mt=8">https://itunes.apple.com/us/app/wotd/id721103056?mt=8</a></li>
+		   </ul>
+		   </li>		   
 		</ul>
 		
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
