update yunio page

--- a/yunio/index.html
+++ b/yunio/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/bppi7rwf0vz9ooa/Groubum.plist">
-    <h2>Cliq 0.6.1 / Mar 16</h2>
+    <h2>Cliq</h2>
 </a>
 
 
