update projects delete yunio page

--- a/projects.html
+++ b/projects.html
@@ -81,7 +81,7 @@
 		<ul>
 		   <li> 围棋名人名局 - StoneBoard 
  		      <ul>
- 		         <li> <a href="http://stoneboard.sinaapp.com/">http://stoneboard.sinaapp.com/</a></li>
+ 		         <li> <del><a href="http://stoneboard.sinaapp.com/">http://stoneboard.sinaapp.com/</a></del> </li>
  		         <li> <a href="https://itunes.apple.com/cn/app/wei-qi-ming-ren-ming-ju/id503170745?mt=8">https://itunes.apple.com/cn/app/wei-qi-ming-ren-ming-ju/id503170745?mt=8</a></li>
  		      </ul>
 		   </li>
