--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html>
+<!--h!DOCTYPE html>
+<tml>
 	<head>
 		<meta charset="utf-8">
 		<title>stoprain.net</title>
@@ -31,4 +31,4 @@
 		<script src="js/bootstrap.min.js"></script>
 		
 	</body>
-</html>
+</html-->
