--- a/test.html
+++ b/test.html
@@ -1,11 +1,11 @@
 <html>
 <body>
-<a href='objc://trick'>trick</a>
+<a href='objc://gift_app/go_back'>go back</a>
 <br/>
-<a href='objc://gift'>gift</a>
+<a href='objc://gift_app/copy?code=helloworld123'>copy</a>
 <br/>
-<a href='objc://gift_app/block'>share</a>
+<a href='objc://gift_app/block'>block</a>
 <br/>
-<a href='objc://gift_app/unblock'>share</a>
+<a href='objc://gift_app/unblock'>unblock</a>
 </body>
 </html>
