--- a/test.html
+++ b/test.html
@@ -7,5 +7,7 @@
 <a href='objc://gift_app/block'>block</a>
 <br/>
 <a href='objc://gift_app/unblock'>unblock</a>
+<br/>
+<a href='itms-apps://itunes.apple.com/us/app/2333-da-ren-nei-han-you-mo/id1066680372?mt=8'>app store</a>
 </body>
 </html>
